--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<table>
 			<tr>
 				<td><i class='bx bxs-user-circle usericon'></i></td>
-				<td >Manoj Adhikari</td>
+				<td >Tom Cruz</td>
 				<td>Meeting Scheduled</td>
 				<td style="text-align: right;">12:30 PM</td>
 			</tr>
