--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
 
 <!--sidebar start -->
 	<div class="mobile-menu">
-		<h3>M-SoftTech <i class='bx bx-menu'id="mbmenu"></i></h3>
+		<h3>Admin Dashboard</h3> <i class='bx bx-menu'id="mbmenu"></i></h3>
 
 		<ul class="sidemenu hidden">
 		
 		<li><a > Home</a></li>
-		<li><a >Analist</li>
-		<li><a >castle</a></li>
-		<li><a >Mail</a></li>
-		<li><a >play</a></li>
-		<li><a >User</a></li>
-		<li><a >Notes</a></li>
-		<li><a >dollar</a></li>
+		<li><a >User</li>
+		<li><a >Messages</a></li>
+		<li><a >Add Money</a></li>
+        <li><a >Send  Money</a></li>
 		<li><a >Settings</a></li>
 	</ul>
 	</div>
@@ -32,15 +29,12 @@
 	<i class='bx bx-chevron-right dirarrow'></i>
 	<i class='bx bx-chevron-left dirarrowright'></i>
 	<ul class="sidemenu">
-		<h3>M<span>-SoftTech</span></h3>
+		<h3>Zaid <span>Dashboard</span></h3>
 		<li><a ><i class='bx bx-home-alt'></i> Home</a></li>
-		<li><a ><i class='bx bx-bar-chart-square' ></i> Analist</li>
-		<li><a ><i class='bx bxs-castle'></i> castle</a></li>
 		<li><a ><i class='bx bx-envelope' ></i> Mail</a></li>
-		<li><a ><i class='bx bx-play-circle' ></i> play</a></li>
+		<li><a ><i class='bx bx-play-circle' ></i> Play</a></li>
 		<li><a ><i class='bx bx-user-circle'></i> User</a></li>
 		<li><a ><i class='bx bx-notepad'></i> Notes</a></li>
-		<li><a ><i class='bx bx-dollar-circle' ></i> dollar</a></li>
 		<li><a ><i class='bx bx-cog' ></i> Settings</a></li>
 	</ul>
 
