--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <!--main-content start --->
 <div class="main-content">
-	<h2>Good Moring, Manoj!</h2>
+	<h2>Good Moring, Zaid</h2>
 
 	<div class="box">
 		<img src="image/i1.png" class="iconimg" />
@@ -103,7 +103,7 @@
 			</tr>
 			<tr>
 				<td><i class='bx bxs-user-circle usericon'></i></td>
-				<td >Shivam Adhikari</td>
+				<td >Cillian Murphy</td>
 				<td>Updating on marketing </td>
 				<td style="text-align: right;">2:30 PM</td>
 			</tr>
